--- a/paper.bib
+++ b/paper.bib
@@ -2,26 +2,20 @@
 Author = {David Duvenaud and Dougal Maclaurin and Jorge Aguilera-Iparraguirre and Rafael Gómez-Bombarelli and Timothy Hirzel and Alán Aspuru-Guzik and Ryan P. Adams},
 Title = {Convolutional Networks on Graphs for Learning Molecular Fingerprints},
 Year = {2015},
-Journal = {Neural Information Processing Systems},
+Journal = {Neural Inf. Proc. Sys. (NIPS)},
 }
 
 @article{alex_net,
 Author = {Alex Krizhevsky and Ilya Sutskever and Geoffrey Hinton},
 Title = {ImageNet Classification with Deep Convolutional Neural Networks},
 Year = {2012},
-Journal = {Neural Information Processing Systems},
-}
-
-@article{matching_nets,
-Author = {Oriol Vinyals and Charles Blundell and Timothy Lillicrap and Koray Kavukcuoglu and Daan Wiestra},
-TItle = {Matching Networks for One Shot Learning},
-year = {2016},
+Journal = {Neural Inf. Proc. Sys. (NIPS)},
 }
 
 @article{ma2015deep,
   title={Deep neural nets as a method for quantitative structure--activity relationships},
   author={Ma, Junshui and Sheridan, Robert P and Liaw, Andy and Dahl, George E and Svetnik, Vladimir},
-  journal={Journal of chemical information and modeling},
+  journal={J. Chem. Inf. Model.},
   volume={55},
   number={2},
   pages={263--274},
@@ -49,8 +43,8 @@ year = {2016},
 
 @article{waring2015analysis,
   title={An analysis of the attrition of drug candidates from four major pharmaceutical companies},
-  author={Waring, Michael J and Arrowsmith, John and Leach, Andrew R and Leeson, Paul D and Mandrell, Sam and Owen, Robert M and Pairaudeau, Garry and Pennie, William D and Pickett, Stephen D and Wang, Jibo and others},
-  journal={Nature reviews Drug discovery},
+  author={Waring, Michael J and Arrowsmith, John and Leach, Andrew R and Leeson, Paul D and Mandrell, Sam and Owen, Robert M and Pairaudeau, Garry and Pennie, William D and Pickett, Stephen D and Wang, Jibo and Wallace, Owens and Weir, Alex},
+  journal={Nature Rev. Drug Disc.},
   volume={14},
   number={7},
   pages={475--486},
@@ -58,21 +52,32 @@ year = {2016},
   publisher={Nature Publishing Group}
 }
 
+%@article{waring2015analysis,
+%  title={An analysis of the attrition of drug candidates from %four major pharmaceutical companies},
+%  author={Waring, Michael J and Arrowsmith, John and Leach, %Andrew R and Leeson, Paul D and Mandrell, Sam and Owen, Robert %M and Pairaudeau, Garry and Pennie, William D and Pickett, %Stephen D and Wang, Jibo and others},
+%  journal={Nature Reviews Drug discovery},
+%  volume={14},
+%  number={7},
+%  pages={475--486},
+%  year={2015},
+%  publisher={Nature Publishing Group}
+%}
+
 @article{ILSVRC15,
 Author = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and Sanjeev Satheesh and Sean Ma and Zhiheng Huang and Andrej Karpathy and Aditya Khosla and Michael Bernstein and Alexander C. Berg and Li Fei-Fei},
 Title = {{ImageNet Large Scale Visual Recognition Challenge}},
 Year = {2015},
-journal   = {International Journal of Computer Vision (IJCV)},
+journal   = {Int. J. Comp. Vis. (IJCV)},
 doi = {10.1007/s11263-015-0816-y},
 volume={115},
 number={3},
 pages={211-252}
 }
 
-@inproceedings{deng2013new,
+@article{deng2013new,
   title={New types of deep neural network learning for speech recognition and related applications: An overview},
   author={Deng, Li and Hinton, Geoffrey and Kingsbury, Brian},
-  booktitle={2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
+  journal={Int. Conf.  Acous. Speech Signal Proc.},
   pages={8599--8603},
   year={2013},
   organization={IEEE}
@@ -80,14 +85,15 @@ pages={211-252}
 
 @article{wu2016google,
   title={{Google's Neural Machine Translation System: Bridging the Gap between Human and Machine Translation}},
-  author={Wu, Yonghui and Schuster, Mike and Chen, Zhifeng and Le, Quoc V and Norouzi, Mohammad and Macherey, Wolfgang and Krikun, Maxim and Cao, Yuan and Gao, Qin and Macherey, Klaus and others},
+  author={Wu, Yonghui and Schuster, Mike and Chen, Zhifeng and Le, Quoc V and Norouzi, Mohammad and Macherey, Wolfgang and Krikun, Maxim and Cao, Yuan and Gao, Qin and Macherey, Klaus and Klingner, Jeff and Shah, Apurva and Johnson, Melvin and Liu, Xiaobing and Kaiser, Łukasz and Gouws, Stephan  and Kato, Yoshikiyo and Kudo, Taku  and Kazawa, Hideto and Stevens, Keith and Kurian, George and Patil, Nishant and Wang, Wei and Young, Cliff and Smith, Jason and Riesa, Jason and Rudnick, Alex and Vinyals, Oriol and Corrado, Greg and Hughes, Macduff and Dean, Jeffrey},
   journal={arXiv preprint arXiv:1609.08144},
   year={2016}
 }
 
 @article{silver2016mastering,
   title={{Mastering the game of Go with deep neural networks and tree search}},
-  author={Silver, David and Huang, Aja and Maddison, Chris J and Guez, Arthur and Sifre, Laurent and Van Den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and others},
+  author={Silver, David and Huang, Aja and Maddison, Chris J and Guez, Arthur and Sifre, Laurent and Van Den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and Dieleman, Sander and Grewe, Dominik and Nham, John and Kalchbrenner, Nal and Sutskever, Ilya and Lillicrap, Timothy and  Leach, Madeleine
+  and  Kavukcuoglu, Koray and Graepel, Thore and Hassabis, Demis},
   journal={Nature},
   volume={529},
   number={7587},
@@ -96,13 +102,12 @@ pages={211-252}
   publisher={Nature Publishing Group}
 }
 
-@article{dahl2012deep,
+@misc{dahl2012deep,
 author = {Dahl, George},
-title = {{Deep Learning How I Did It: Merck 1st place interview}},
-journal = {No Free Hunch},
+title = {Deep Learning How I Did It: Merck 1st place interview},
 type = {Blog},
 year = {November 1, 2012},
-howpublished = {\url{http://tinyurl.com/n2putqv}}
+howpublished = {\url{http://blog.kaggle.com/2012/11/01/deep-learning-how-i-did-it-merck-1st-place-interview/}}
 }
 
 @article{ramsundar2015massively,
@@ -115,15 +120,15 @@ howpublished = {\url{http://tinyurl.com/n2putqv}}
 @article{unterthiner2014deep,
   title={Deep learning as an opportunity in virtual screening},
   author={Unterthiner, Thomas and Mayr, Andreas and Klambauer, G{\"u}nter and Steijaert, Marvin and Wegner, J{\"o}rg K and Ceulemans, Hugo and Hochreiter, Sepp},
-  journal={Advances in Neural Information Processing Systems},
+  journal={Neural Inf. Proc. Sys. (NIPS)},
   volume={27},
   year={2014}
 }
 
-@inproceedings{duvenaud2015convolutional,
+@article{duvenaud2015convolutional,
   title={Convolutional networks on graphs for learning molecular fingerprints},
   author={Duvenaud, David K and Maclaurin, Dougal and Iparraguirre, Jorge and Bombarell, Rafael and Hirzel, Timothy and Aspuru-Guzik, Al{\'a}n and Adams, Ryan P},
-  booktitle={Advances in Neural Information Processing Systems},
+  journal={Neural Inf. Proc. Sys. (NIPS)},
   pages={2224--2232},
   year={2015}
 }
@@ -138,7 +143,7 @@ howpublished = {\url{http://tinyurl.com/n2putqv}}
 @article{rogers2010extended,
   title={Extended-connectivity fingerprints},
   author={Rogers, David and Hahn, Mathew},
-  journal={Journal of chemical information and modeling},
+  journal={J. Chem. Inf. Model.},
   volume={50},
   number={5},
   pages={742--754},
@@ -149,7 +154,7 @@ howpublished = {\url{http://tinyurl.com/n2putqv}}
 @article{subramanian2016computational,
   title={Computational Modeling of $\beta$-secretase 1 (BACE-1) Inhibitors using Ligand Based Approaches},
   author={Subramanian, Govindan and Ramsundar, Bharath and Pande, Vijay S and Denny, Rajiah Aldrin},
-  journal={Journal of Chemical Information and Modeling},
+  journal={J. Chem. Inf. Model.},
   year={2016},
   publisher={ACS Publications}
 }
@@ -201,7 +206,8 @@ howpublished = {\url{http://tinyurl.com/n2putqv}}
 
 @article{abadi2016tensorflow,
   title={Tensorflow: Large-scale machine learning on heterogeneous distributed systems},
-  author={Abadi, Mart{\i}n and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and others},
+  author={Abadi, Mart{\i}n and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and  Ghemawat, Sanjay and Goodfellow, Ian and Harp, Andrew and Irving, Geoffrey and Isard, Michael and Jia, Yangqing and Jozefowicz, Rafal and Kaiser, Lukasz and Kudlur, Manjunath and Levenberg, Josh and Mane, Dan and Monga, Rajat and Moore, Sherry and Murray, Derek and Olah, Chris and Schuster, Mike and Shlens, Jonathon and Steiner, Benoit and Sutskever, Ilya and Talwar, Kunal and Tucker, Paul and Vanhoucke, Vincent and Vasudevan, Vijay and Viegas, Fernanda and Vinyals, Oriol and Warden, Pete and Wattenberg, Martin and Wicke, Martin and Yu, Yuan and Zheng, Xiaoqiang
+},
   journal={arXiv preprint arXiv:1603.04467},
   year={2016}
 }
@@ -213,10 +219,10 @@ howpublished = {\url{http://tinyurl.com/n2putqv}}
   school={University of Toronto}
 }
 
-@inproceedings{graves2013hybrid,
+@article{graves2013hybrid,
   title={Hybrid speech recognition with deep bidirectional LSTM},
   author={Graves, Alex and Jaitly, Navdeep and Mohamed, Abdel-rahman},
-  booktitle={Automatic Speech Recognition and Understanding (ASRU), 2013 IEEE Workshop on},
+  journal={Aut. Speech Rec. Und. (ASRU)},
   pages={273--278},
   year={2013},
   organization={IEEE}
@@ -232,7 +238,7 @@ howpublished = {\url{http://tinyurl.com/n2putqv}}
 @article{hochreiter1997long,
   title={Long short-term memory},
   author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
-  journal={Neural computation},
+  journal={Neural Comp.},
   volume={9},
   number={8},
   pages={1735--1780},
@@ -262,7 +268,7 @@ howpublished = {\url{http://tinyurl.com/n2putqv}}
 @article{kuhn2015sider,
   title={The SIDER database of drugs and side effects},
   author={Kuhn, Michael and Letunic, Ivica and Jensen, Lars Juhl and Bork, Peer},
-  journal={Nucleic acids research},
+  journal={Nucleic Acids Res.},
   pages={gkv1075},
   year={2015},
   publisher={Oxford Univ Press}
@@ -271,7 +277,7 @@ howpublished = {\url{http://tinyurl.com/n2putqv}}
 @article{rohrer2009maximum,
   title={Maximum unbiased validation (MUV) data sets for virtual screening based on PubChem bioactivity data},
   author={Rohrer, Sebastian G and Baumann, Knut},
-  journal={Journal of chemical information and modeling},
+  journal={J. Chem. Inf. Model.},
   volume={49},
   number={2},
   pages={169--184},
@@ -289,7 +295,7 @@ howpublished = {\url{http://tinyurl.com/n2putqv}}
 @article{lusci2013deep,
   title={Deep architectures and deep learning in chemoinformatics: the prediction of aqueous solubility for drug-like molecules},
   author={Lusci, Alessandro and Pollastri, Gianluca and Baldi, Pierre},
-  journal={Journal of chemical information and modeling},
+  journal={J. Chem. Inf. Model.},
   volume={53},
   number={7},
   pages={1563--1575},
